--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -83,6 +83,7 @@
      <Compile Include="Assets\DestroyBall.cs" />
      <Compile Include="Assets\GyroscopeEnable.cs" />
      <Compile Include="Assets\MessageManager.cs" />
+     <Compile Include="Assets\MoveBall.cs" />
      <Compile Include="Assets\Myo Samples\Scripts\ColorBoxByPose.cs" />
      <Compile Include="Assets\Myo Samples\Scripts\JointOrientation.cs" />
      <Compile Include="Assets\Myo Samples\Scripts\SampleSceneGUI.cs" />
